fixes in result post alignment

--- a/WebContent/styles.css
+++ b/WebContent/styles.css
@@ -226,5 +226,11 @@
 	.remove_field{
 		margin-left: 10px;
 	}
+	#content{
+		margin-left:40px;
+	}
+	#footer{
+		margin-left:40px;
+	}
 	
 </style>
